--- a/trainer/templates/trainer/edit_profile.html
+++ b/trainer/templates/trainer/edit_profile.html
@@ -63,6 +63,7 @@
                                                     <button class="btn btn-add"><i class="icon icon-add"></i></button>
                                                 </td>
                                             </tr>
+                                            {{form.errors}}
                                             {% for timeline in user_data.0.timeline_set.all %}
                                             <tr>
                                                 <td>{{timeline.organization}}</td>
