--- a/trainer/templates/trainer/navbar.html
+++ b/trainer/templates/trainer/navbar.html
@@ -1,45 +1,46 @@
 {% load static %}
 
 <nav class="navbar navbar-default header-section navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="{% url 'trainer:listing' %}">
-      <div class="navbar-brand logo-cntnr"><img
-              src="{% static 'trainer/img/logo.png' %}"
-              class="img-responsive">
-      </div>
-      </a>
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="{% url 'trainer:listing' %}">
+                <div class="navbar-brand logo-cntnr"><img
+                        src="{% static 'trainer/img/logo.png' %}"
+                        class="img-responsive">
+                </div>
+            </a>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right navbar-menu ">
+                <li>
+                    <div class="form-group">
+                        <form method="get " role="search" action="{% url 'trainer:listing' %}">
+                            {% csrf_token %}
+                            <input type="text" name="search" placeholder="Search" class="form-control searchbox">
+                            <span class="search-btn"><i class="icon-search"></i></span>
+                        </form>
+                    </div>
+                </li>
+                {% if user.is_authenticated %}
+                <li><a href="{% url 'trainer:inbox' %}"><span class="icon-notifications"><div class="badge">5</div></span></a></li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <div class="user-pic" style="background: url('/media/{{user_id}}{{user.profile_set.all.0.photo}}') center no-repeat;"></div>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{% url 'trainer:update' %}">Edit Profile</a></li>
+                        <li><a href="{% url 'trainer:logout' %}">Logout</a></li>
+                    </ul>
+                </li>
+                {% else %}
+                <li><a href="{% url 'trainer:register' %}" class="btn btn-message">I'm a trainer</a></li>
+                {% endif %}
+            </ul>
+        </div>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right navbar-menu ">
-        <li><a href="{% url 'trainer:register' %}" class="btn btn-message">I'm a trainer</a></li>
-        <li>
-			<div class="form-group">
-                <form method="get " role="search" action="{% url 'trainer:listing' %}">
-                    {% csrf_token %}
-    				<input type="text" name="search" placeholder="Search" class="form-control searchbox">
-                    <span class="search-btn"><i class="icon-search"></i></span>
-                </form>
-			</div>
-        </li>
-        {% if user.is_authenticated %}
-        <li><a href="{% url 'trainer:inbox' %}"><span class="icon-notifications"><div class="badge">5</div></span></a></li>
-        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-        	<div class="user-pic" style="background: url('/media/{{user_id}}{{user.profile_set.all.0.photo}}') center no-repeat;"></div>
-        </a>
-        <ul class="dropdown-menu">
-            <li><a href="{% url 'trainer:update' %}">Edit Profile</a></li>
-            <li><a href="{% url 'trainer:logout' %}">Logout</a></li>
-        </ul>
-        {% endif %}
-      	</li>
-      </ul>
-    </div>
-  </div>
 </nav>
